--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
             body {
                 margin: 0;
             }
-            img{
+            img {
                 max-width: 100%;
                 vertical-align: top;
+            }
+            img#responsive {
+                display: none;
+            }
+            @media screen and (max-width:768px) {
+                img#responsive {
+                    display: block;
+                }
             }
         </style>
     </head>
     <body>
-        <img src="header.jpg">
-        <img src="hero.jpg">
-        <img src="acustica.jpg">
+        <img src="invie-responsive.png" alt="" id="responsive">
+        <img src="header.jpg" alt="">
+        <img src="hero.jpg" alt="">
+        <img src="acustica.jpg" alt="">
     </body>
 </html>
